<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.crescentflare.smartmockexample.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/heading_margin"
                android:paddingBottom="@dimen/heading_margin"
                android:text="@string/section_user"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/background_heading"/>
            <TextView
                android:id="@+id/main_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/heading_spacing_bottom"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/user_not_logged_in"/>
            <TextView
                android:id="@+id/main_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_spacing"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/link_log_in"
                android:textColor="@color/link"/>
            <TextView
                android:id="@+id/main_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_spacing"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/link_log_out"
                android:textColor="@color/link"
                android:visibility="gone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/heading_spacing_top"
                android:layout_marginBottom="@dimen/heading_spacing_bottom"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/heading_margin"
                android:paddingBottom="@dimen/heading_margin"
                android:text="@string/section_products"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/background_heading"/>
            <TextView
                android:id="@+id/main_products_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/products_not_loaded"/>
            <LinearLayout
                android:id="@+id/main_products_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/text_spacing"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:visibility="gone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/heading_spacing_top"
                android:layout_marginBottom="@dimen/heading_spacing_bottom"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingTop="@dimen/heading_margin"
                android:paddingBottom="@dimen/heading_margin"
                android:text="@string/section_services"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@drawable/background_heading"/>
            <TextView
                android:id="@+id/main_services_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/services_not_loaded"/>
            <LinearLayout
                android:id="@+id/main_services_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/text_spacing"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/main_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="#3f000000">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</FrameLayout>
